text wrap fix

--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,7 @@ nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     max-width: 150px;
+    white-space: nowrap;
 }
 
 .icon-item img {
@@ -230,6 +231,7 @@ nav ul li a:hover {
     font-weight: 500;
     margin-top: 40px;
     color: #bf1b1b;
+    white-space: nowrap;
 }
 
 .clients-section {
